updated config.xml file sent to jenkins and got the regressin working after the merge with develop